<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f7f9"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dip"
        android:background="#c9e3e7"
        android:gravity="center" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#355063"
            android:textSize="18sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="436dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="20dip" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnWeakness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_weakness_background" />

                <TextView
                    android:id="@+id/txtWeakness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/weakness"
                    android:textColor="#355063" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnFatigue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_fatigue_background" />

                <TextView
                    android:id="@+id/txtFatigue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/fatigue"
                    android:textColor="#355063" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnVisual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_visual_normal" />

                <TextView
                    android:id="@+id/txtViture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:text="@string/visual"
                    android:textColor="#355063" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnThead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_tneck_background" />

                <TextView
                    android:id="@+id/txtThead"
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:text="@string/tingling_in_head"
                    android:textColor="#355063" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnTneck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_tneck_normal" />

                <TextView
                    android:id="@+id/txtTneck"
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:text="@string/tingling_in_neck"
                    android:textColor="#355063" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnTeyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_teye_normal" />

                <TextView
                    android:id="@+id/txtTeyes"
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:text="@string/tingling_eyes"
                    android:textColor="#355063" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_none" />

                <TextView
                    android:id="@+id/txtNone"
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:text="@string/none"
                    android:textColor="#355063" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_new" />

                <TextView
                    android:id="@+id/txtAdd"
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="#355063" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                
            </LinearLayout>
            
            
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#04aeba"
        android:clickable="true" >

        <TextView
            android:id="@+id/txtConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dip"
            android:layout_marginTop="12dip"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPainOnset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dip"
            android:text="@string/pain_onset"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginTop="16dip"
            android:layout_toRightOf="@+id/txtConfirm"
            android:contentDescription="@string/skip"
            android:src="@drawable/ic_btn_comfirm" />
    </RelativeLayout>

</LinearLayout>